--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css" />
+    <title>easEquations</title>
+    <link rel="icon" type="image/x-icon" href="/images/eEq_bold_squircle.png">
+</head>
+<header>
 
+</header>
+
+<body>
+
+    <img src="images/logo_placeholder_construction.png" alt="easEquations logo" class="center" />
+    <h1 class="center">Coming soon!</h1>
+
+
+
+</body>
