--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
     <title>easEquations</title>
     <link rel="icon" type="image/x-icon" href="/images/eEq_bold_squircle.png">
+    <script type="module" src="https://unpkg.com/@fluentui/web-components"></script>
 </head>
 <header>
 
@@ -14,7 +15,9 @@
 
 <body>
 
-    <img src="images/logo_placeholder_construction.png" alt="easEquations logo" class="center" />
+    <fluent-card class="customcard">
+        <img src="images/logo_placeholder_construction.png" alt="easEquations logo" class="logocenter"/>
+    </fluent-card>
     <h1 class="center">Coming soon!</h1>
 
 
