What's New stuff -2.3 update added. -GPT generated to see if X code could convert to H code

--- a/windows-whats-new/index.html
+++ b/windows-whats-new/index.html
@@ -9,7 +9,32 @@
 </head>
 <body>
     <div id="content">
-        <img id="logolong" src="../images/logo_placeholder_construction.png">
+        <img id="logolong" src="../images/logo/logo_wideTile-B.png">
+        <div class="stack-panel">
+            <!-- Updates Grid -->
+            <div class="grid" style="border-radius: 8px; min-height: 300px; margin: 30px 50px; background-color: #F2F2F2;">
+              <div class="stack-panel" style="margin: 10px 40px; max-width: 750px;">
+                <h1>What's New</h1>          
+                <!-- Version 2.3 -->
+                <details open>
+                  <summary style="font-size: 16px; font-weight: bold;">Version 2.3</summary>
+                  <div style="margin-top: 10px;">
+                    <p style="font-size: 22px; margin: 0 0 2px;">Version 2.3.1</p>
+                    <p style="font-size: 14px;">02/25/2023</p>
+                    <p style="font-size: 16px; margin: 15px 0;">Update 2.3.1 is here. Home has now been renamed to What's New, Settings is now reorganized, and bugs have been squashed.</p>
+                    <p style="font-size: 22px; margin: 0 0 2px;">Version 2.3.0</p>
+                    <p style="font-size: 14px;">02/23/2023</p>
+                    <p style="font-size: 16px; margin: 15px 0;">Welcome to the 2.3 update! It's quite boring- mostly bug fixes, but the app icons now respect system themes.</p>
+                    <div style="margin: 10px 0; display: flex; align-items: center;">
+                      <p style="font-size: 12px; margin: 0 5px 0 0;">Ta-da!!! Doesn't it look pretty?</p>
+                      <img src="../images/whats-new/update_2-3/theme_respect.png" alt="Theme Respect" style="max-width: 520px;" />
+                    </div>
+                  </div>
+                </details>
+              </div>
+            </div>
+          </div>
+          
     </div>
     
 </body>
