First major changes -iFrame holding 2D Shapes -Beginning of standard skeleton

--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <link rel="stylesheet" href="styles/styles.css" />
     <title>easEquations</title>
     <link rel="icon" type="image/x-icon" href="/images/eEq_bold_squircle.png">
-    <script type="module" src="https://unpkg.com/@fluentui/web-components"></script>
 </head>
 <header>
-
+    <img id="header_logo" src="images/logo/logo_wideTile-B.png" >
 </header>
 
 <body>
 
-    <fluent-card class="customcard">
-        <img src="images/logo_placeholder_construction.png" alt="easEquations logo" class="logocenter"/>
-    </fluent-card>
-    <h1 class="center">Coming soon!</h1>
+    <div id="side_menu">
+
+    </div>
+
+    <div>
+        <iframe id="page_frame" src="area2d/index.html"></iframe>
+    </div>
+
 
 
 
