--- a/area2d/index.html
+++ b/area2d/index.html
@@ -8,7 +8,7 @@
     <title>2D Shapes</title>
 </head>
 <header id="page_header">
-    <img id="page_logo" src="/images/icons/area_2D.png">
+    <img id="page_logo" src="../images/icons/area_2D.png">
     <h1 id="page_title">2D Shapes</h1>
 </header>
 <body>
